[refactor] Fix z-indexing on pub record
(cherry picked from commit e17938376a6a59c50ba97e2bb26f757ed17d4ae7)

--- a/html/com_publications/publications.scss
+++ b/html/com_publications/publications.scss
@@ -24,6 +24,7 @@
   position: sticky;
   top: 3.5rem;
   transition: .2s;
+  z-index: 1000;
   .back {
     grid-column: 1 / span 1;
     font-size: .9em;
@@ -79,7 +80,7 @@
   box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.5);
   font-size: .8rem;
   padding-top: 2em;
-  z-index: 10;
+  // z-index: 1000;
 
   h2 {
     font-size: 1.7rem;
